Bug 361053 - Center “click anywhere” message on screen instead of entire virtual desktop
Summary: Center “click anywhere” message on screen instead of entire virtual desktop
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Peter Wu
URL:
Keywords:
: 369287 403959 404213 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-03-27 19:07 UTC by Martin Herkt
Modified: 2019-03-04 16:48 UTC (History)
6 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Herkt 2016-03-27 19:07:41 UTC
Currently, the usage hint in the cropper window is centered in the window instead of the currently active screen. This should be changed so it only appears on the active screen and does not span multiple physical displays.

Reproducible: Always

Steps to Reproduce:
1. Use the “rectangular region” capture mode on a system with a virtual desktop spanning multiple physical displays

Actual Results:  
Message is centered on the virtual desktop, potentially spanning multiple physical displays.

Expected Results:  
Message is centered on the physical display that corresponds to the active screen.
Comment 1 Peter Wu 2016-10-13 01:11:21 UTC
*** Bug 369287 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2019-02-05 19:56:30 UTC
*** Bug 403959 has been marked as a duplicate of this bug. ***
Comment 3 Nate Graham 2019-02-11 22:27:53 UTC
*** Bug 404213 has been marked as a duplicate of this bug. ***
Comment 4 Nate Graham 2019-03-04 16:47:48 UTC
Git commit 7e7476619dfc0cb69daa3f075d2ddaed8288433a by Nate Graham, on behalf of Nils Rother.
Committed on 04/03/2019 at 16:47.
Pushed by ngraham into branch 'master'.

Fix recangle-selection help-text positioning

Summary:

When taking a screenshot with the rectangle selection tool in spectacle,
the overlaid help-text is put in the center of the entire desktop,
instead of the center of a single display. This can cause readability
issues when it is placed on the bezel of two physical displays.
This patch horizontally centers the help-text overlay on the primary display.
This affects both the "Click anywhere to start" dialogue and the hotkey help-text.

Test Plan:
Before:
{F6656417}
{F6656455}

After:
{F6656419}
{F6656456}

Reviewers: #spectacle, #vdg, ngraham

Reviewed By: #spectacle, #vdg, ngraham

Subscribers: abetts, ngraham

Tags: #spectacle

Differential Revision: https://phabricator.kde.org/D19515

M  +4    -3    src/QuickEditor/QuickEditor.cpp
M  +3    -0    src/QuickEditor/QuickEditor.h

https://commits.kde.org/spectacle/7e7476619dfc0cb69daa3f075d2ddaed8288433a